--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,5 @@
+@import '~@splidejs/splide/dist/css/splide.min.css';
+
 @tailwind base;
 
 @tailwind components;
@@ -15,6 +17,26 @@
 @layer components {
     .menu-item {
         @apply flex items-center justify-center flex-col bg-white p-2 rounded-lg hover:bg-violet-800 transition hover:text-white;
+    }
+
+    .custom-scroll {
+        @apply scrollbar scrollbar-thin scrollbar-thumb-indigo-300 scrollbar-track-transparent scrollbar-thumb-rounded-md;
+    }
+
+    .skills-table {
+        grid-template-columns: 88px 1fr;
+    }
+
+    .skills-table > div {
+        @apply border-b border-indigo-300
+    }
+    .skills-table > div.border-b-0 {
+        border-bottom: 0;
+    }
+        @media (min-width: 359px) {
+            .tooltip-content {
+                width: 257px;
+            }
     }
 }
 
@@ -47,4 +69,20 @@
 .slide-left-enter-from,
 .slide-left-leave-to {
     @apply opacity-0 scale-0 -translate-x-20;
+}
+
+.splide__slide {
+    @apply rounded-lg overflow-hidden;
+}
+
+.splide__pagination {
+    @apply top-full mt-5;
+}
+
+.splide__pagination__page {
+    @apply bg-violet-400;
+}
+
+.splide__pagination__page.is-active {
+    @apply bg-violet-800 scale-125;
 }
