Added table of stars

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -12,6 +12,9 @@
             display: block !important;
         }
     }
+    .text-vertical {
+        writing-mode: vertical-lr;
+    }
 }
 
 @layer components {
