--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -33,13 +33,18 @@
     .skills-table > div {
         @apply border-b border-indigo-300
     }
+
     .skills-table > div.border-b-0 {
         border-bottom: 0;
     }
-        @media (min-width: 359px) {
-            .tooltip-content {
-                width: 257px;
-            }
+
+    @media (min-width: 359px) {
+        .tooltip-content {
+            width: 257px;
+        }
+    }
+    .hover-row {
+        @apply relative;
     }
 }
 
@@ -55,6 +60,16 @@
 .fade-enter-from,
 .fade-leave-to {
     @apply opacity-0;
+}
+
+.slide-up-enter-active,
+.slide-up-leave-active {
+    @apply transition transform origin-bottom;
+}
+
+.slide-up-enter-from,
+.slide-up-leave-to {
+    @apply scale-y-0;
 }
 
 .slide-right-enter-active,
